# trixie

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  dockerfile  pyproject.toml
.claude/: settings.json
.claude/commands/: init-worktree.md
.claude/hooks/: post-edit-task.sh  pre-complete-task.sh  pre-tool-task.sh
.github/workflows/: ci.yml  claude-code-review.yml  push_docker_image.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
.trellis/f/F-reverse-proxy-api-for-testing/: F-reverse-proxy-api-for-testing.md
http_requests/: clear_transactions.http  get_all_transactions.http  get_transactions_with_count.http  health_check.http  proxy_delete_request.http  proxy_get_request.http  proxy_post_request.http  proxy_put_request.http  proxy_setup.http  proxy_with_headers.http  proxy_with_query_params.http
scripts/: docker_start.sh  generate-certs.sh
src/: start.sh
src/app/: app_prestart.py  main.py
src/app/api/: router.py
src/app/api/endpoints/: clear_transactions.py  health_check.py  proxy_handler.py  proxy_setup.py  transactions.py
src/app/core/: add_proxy_config.py  add_transaction.py  clear_proxy_configs.py  clear_transactions.py  get_proxy_config.py  get_transactions.py  storage_data.py
tests/: test_integration_complete_proxy_workflow.py  test_proxy_handler_endpoint.py  test_proxy_setup_endpoint.py  test_router_endpoint_accessibility.py  test_setup_request.py  test_setup_response.py  test_storage_functions.py  test_transaction_record.py  test_transactions_endpoint.py  test_transactions_response.py
(+14 files in other folders)
